fixed overlapping containers

--- a/style.css
+++ b/style.css
@@ -58,18 +58,26 @@ button:hover {
   transition: all 0.6s ease;
   position: absolute;
   width: 100%;
+  margin-top: 0px;
+  padding: 20px;
+  padding-top: 100px;
 }
 
 .module.active {
   opacity: 1;
   transform: scale(1);
+  margin-top: 0px;
+  padding: 20px;
+  padding-top: 100px;
 }
 
 #subModules {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 40px;
+  margin-top: 0px;
+  padding: 20px;
+  padding-top: 100px;
 }
 
 .orb {
@@ -124,6 +132,6 @@ button:hover {
   height: 20px;
   padding: 0px;
   margin: 0px;
-  color: #531A91;
+  accent-color: #531A91;
   align-items: left;
 }
